fixed alignment issues

--- a/MainPageStyleSheet.css
+++ b/MainPageStyleSheet.css
@@ -151,17 +151,20 @@ span {
 #roboticsPic {
     width: 460px;
     height: 300px;
+    padding-left: 20px;
 }
 
 #soccerWebPic {
     width: 440px;
     height: 280px;
+    padding-left: 20px;
 }
 
 #personalWebPic {
-    width: 440px;
+    width: 450px;
     height: 350px;
 }
+
 .pictureColumn {
     padding-left: 70px;
 }
